Make DU device build with candy

--- a/audio_effects.conf
+++ b/audio_effects.conf
@@ -18,20 +18,20 @@ libraries {
   visualizer_hw {
     path /system/lib/soundfx/libqcomvisualizer.so
   }
-  fmas {
-    path /system/lib/soundfx/libfmas.so
+  downmix {
+    path /system/lib/soundfx/libdownmix.so
   }
   proxy {
     path /system/lib/soundfx/libeffectproxy.so
-  }
-  loudness_enhancer {
-    path /system/lib/soundfx/libldnhncr.so
   }
   offload_bundle {
     path /system/lib/soundfx/libqcompostprocbundle.so
   }
   qcom_pre_processing {
     path /system/lib/soundfx/libqcomvoiceprocessing.so
+  }
+  loudness_enhancer {
+    path /system/lib/soundfx/libldnhncr.so
   }
 }
 
@@ -204,6 +204,15 @@ effects {
   }
 }
 
+pre_processing {
+    voice_communication {
+        aec {
+        }
+        ns {
+        }
+    }
+}
+
 # Default pre-processing effects. Add to audio_effect.conf "effects" section if
 # audio HAL implements support for them.
 #
@@ -256,11 +265,6 @@ effects {
 #        ...
 #    }
 
-pre_processing {
-    voice_communication {
-        aec {
-        }
-        ns {
-        }
-    }
-}
+#
+# TODO: add default audio pre processor configurations after debug and tuning phase
+#
